# Accudrive

./: .gitignore  CNAME  build.gradle  index.html  local.properties  report.txt
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Dash1.mtl  starsRating1.mtl  warningspeed.mtl
app/src/main/cpp/: CMakeLists.txt  DashboardSpeedListener.cpp  DashboardSpeedListener.h  DetectionObjectListener.cpp  DetectionObjectListener.h  RoadParkingListener.cpp  RoadParkingListener.h  ScoreTracker.cpp  ScoreTracker.h  SpeedCheck.cpp  SpeedCheck.h  samplearapp.cpp
app/src/main/res/values/: strings.xml
css/: main.css
gradle/wrapper/: gradle-wrapper.properties
